# open-anonymizer

./: .gitignore  README.md  pyproject.toml
examples/: example_use.R  example_use.py  results.csv  test.csv
open_anonymizer/: anon.py  main.py  model_utils.py  regex_rules.py  utils.py
tests/: test_model_utils.py  test_regex_rules.py  test_utils.py
