[tool.poetry]
name = "open-anonymizer"
version = "0.1.0"
description = "A Library and command line tool for anonymizing texts."
authors = ["Markus Nutz <markus.nutz@gmx.de>", "Dimitri Epp <dimiepp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
transformers = "^4.1.1"
torch = "^1.7.1"
pandas = "^1.2.0"
tqdm = "^4.55.2"
sentencepiece = "^0.1.95"
protobuf = "^3.14.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.8.0"

[tool.poetry.scripts]
anonymize = "open_anonymizer.main:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
